--- a/java/org/mule/module/s3/simpleapi/SimpleAmazonS3.html
+++ b/java/org/mule/module/s3/simpleapi/SimpleAmazonS3.html
@@ -168,9 +168,9 @@
         <div id="nav-panels">
           <div id="resize-packages-nav">
             <div id="packages-nav">
-              <div id="index-links"><nobr>
+              <div id="index-links">
                 <a href="../../../../../../java/packages.html"  >Package Index</a> |
-                <a href="../../../../../../java/classes.html" >Class Index</a></nobr>
+                <a href="../../../../../../java/classes.html" >Class Index</a>
               </div>
               <ul>
                 
@@ -220,9 +220,9 @@
           </div><!-- end classes -->
         </div><!-- end nav-panels -->
         <div id="nav-tree" style="display:none">
-          <div id="index-links"><nobr>
+          <div id="index-links">
             <a href="../../../../../../packages.html"  >Package Index</a> | 
-            <a href="../../../../../../classes.html" >Class Index</a></nobr>
+            <a href="../../../../../../classes.html" >Class Index</a>
           </div>
         </div><!-- end nav-tree -->
       </div><!-- end swapper -->
@@ -943,12 +943,12 @@ Summary:
         </tr>
         <tr>
           <th>destination</td>
-          <td>the destination object. If this id is versioned, its
+          <td>The destination object. If this id is versioned, its
             version is ignored</td>
         </tr>
         <tr>
           <th>conditionalConstraints</td>
-          <td>the constraints to be matched in order to proceed with copy. 
+          <td>The constraints to be matched in order to proceed with copy. 
           If not matched, no copy is performed</td>
         </tr>
         <tr>
@@ -1010,15 +1010,15 @@ Summary:
       <table class="jd-tagtable">
         <tr>
           <th>bucketName</td>
-          <td>mandatory</td>
+          <td>Mandatory</td>
         </tr>
         <tr>
           <th>region</td>
-          <td>optional</td>
+          <td>Optional</td>
         </tr>
         <tr>
           <th>acl</td>
-          <td>optional</td>
+          <td>Optional</td>
         </tr>
       </table>
   </div>
@@ -1077,7 +1077,7 @@ Summary:
       <table class="jd-tagtable">
         <tr>
           <th>objectId</td>
-          <td>the id of the object to be created. If its versioned, its
+          <td>The id of the object to be created. If its versioned, its
             version is ignored</td>
         </tr>
         <tr>
@@ -1148,12 +1148,12 @@ Summary:
         </tr>
         <tr>
           <th>expiration</td>
-          <td>if no expiration is supplied, a default expiration provided
+          <td>If no expiration is supplied, a default expiration provided
             by AmazonS3 will be used</td>
         </tr>
         <tr>
           <th>method</td>
-          <td>if no method is supplied, PUT method is assumed</td>
+          <td>If no method is supplied, PUT method is assumed</td>
         </tr>
       </table>
   </div>
