--- a/java/hierarchy.html
+++ b/java/hierarchy.html
@@ -1128,7 +1128,7 @@
     <td class="jd-hierarchy-spacer"></td>
     <td class="jd-hierarchy-data" colspan="3">
     
-        <a href="../java/org/mule/module/s3/config/S3ConnectorConnectionManager.ConnectionKey.html">S3ConnectorConnectionManager.ConnectionKey</a>
+        <a href="../java/org/mule/module/s3/config/S3ConnectorConnectionManager.ConnectionParameters.html">S3ConnectorConnectionManager.ConnectionParameters</a>
     
     </td>
     <td class="jd-hierarchy-data">
