--- a/java/org/mule/module/s3/config/package-summary.html
+++ b/java/org/mule/module/s3/config/package-summary.html
@@ -217,7 +217,7 @@
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/RegionEnumTransformer.html">RegionEnumTransformer</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/S3ConnectorCapabilitiesAdapter.html">S3ConnectorCapabilitiesAdapter</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/S3ConnectorConnectionManager.html">S3ConnectorConnectionManager</a></li>
-        <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/S3ConnectorConnectionManager.ConnectionKey.html">S3ConnectorConnectionManager.ConnectionKey</a></li>
+        <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/S3ConnectorConnectionManager.ConnectionParameters.html">S3ConnectorConnectionManager.ConnectionParameters</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/S3ConnectorLifecycleAdapter.html">S3ConnectorLifecycleAdapter</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/SetBucketPolicyMessageProcessor.html">SetBucketPolicyMessageProcessor</a></li>
         <li class="api apilevel-"><a href="../../../../../../java/org/mule/module/s3/config/SetBucketVersioningStatusMessageProcessor.html">SetBucketVersioningStatusMessageProcessor</a></li>
@@ -383,7 +383,7 @@
               <td class="jd-descrcol" width="100%">A <code>S3ConnectorConnectionManager</code> is a wrapper around <code><a href="../../../../../../java/org/mule/module/s3/S3Connector.html">S3Connector</a></code> that adds connection management capabilities to the pojo.&nbsp;</td>
           </tr>
         <tr class=" api apilevel-" >
-              <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/s3/config/S3ConnectorConnectionManager.ConnectionKey.html">S3ConnectorConnectionManager.ConnectionKey</a></td>
+              <td class="jd-linkcol"><a href="../../../../../../java/org/mule/module/s3/config/S3ConnectorConnectionManager.ConnectionParameters.html">S3ConnectorConnectionManager.ConnectionParameters</a></td>
               <td class="jd-descrcol" width="100%">&nbsp;</td>
           </tr>
         <tr class="alt-color api apilevel-" >
