--- a/mule/s3.html
+++ b/mule/s3.html
@@ -192,7 +192,7 @@ Summary:
 <div id="jd-header">
     org.mule.modules
 <h1>mule-module-s3</h1>
-    2.0
+    2.1-SNAPSHOT
 
 </div><!-- end header -->
 
